# GFX-Tasks

./: CMakeLists.txt  README.md  getBMP.cpp  task.cpp  task05.cpp
Task 01/: CMakeLists.txt
Task 02/: coil.cpp
Task 05/nouran/: Sunset_and_Spot.cpp
Task 05/task/: CMakeLists.txt  task05.cpp
task-1/: README.md  main.cpp
task-2/: CMakeLists.txt  README.md  coil.cpp  home_scene.cpp
task-3/: CMakeLists.txt  README.md
task-4/: CMakeLists.txt  task.cpp
task01/: README.md
task02/: README.md  leaf.cpp
task03/: main.cpp
task04/: README.md  task.cpp
task05/: CMakeLists.txt  README.md  lighting.cpp  texture+lighting.cpp
